# ssik

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  SUPPORTED_ROBOTS.md  hatch_build.py  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  diag-xarm7.yml  docs.yml  release.yml
docs/: api.md  architecture.md  arm_coverage.md  bibliography.md  index.md  quickstart.md  semver_policy.md  setting_up_your_robot.md
docs/figures/: README.md
docs/reference/: index.md
docs/reference/api/: index.md
docs/reference/ik-modes/: index.md
docs/specs/: hp_robustness_investigation.md  ikgeo_general_6r.md  srs_7r_singh_kreutz.md
docs/tutorial/: 01_ik_problem.md  02_pieper_subproblems.md  03_eaik_gap.md  04_raghavan_roth.md  05_conditioning.md  06_refinement.md  07_kinbody_bridge.md  08_bulletproof.md  09_practical_guide.md  10_whats_next.md  index.md
examples/: 01_ur5_quickstart.py  02_jaco2_non_pieper.py  03_gen3_polished_srs.py  04_compare_vs_eaik.py  04_compare_vs_eaik_mink.py  05_viser_interactive_ik.py
outreach/: README.md  reddit-robotics.md  robotics-worldwide.md  ros-discourse.md  zenodo-setup.md
outreach/conda-forge/: SUBMISSION.md  meta.yaml
packaging/ikfastpy-shim/: README.md  pyproject.toml
packaging/ikfastpy-shim/src/ikfastpy/: __init__.py
prebuilt/: README.md  franka_panda_ik.py  gen3_ik.py  iiwa14_ik.py  jaco2_ik.py  kassow_kr810_ik.py  puma560_ik.py  rizon4_ik.py  ur5_ik.py
scripts/: _bench_lib.py  _flop_budget.py  bench_gen_six_dof.py  bench_jaco2.py  bench_seven_r.py  bench_spherical.py  bench_spherical_two_intersecting.py  bench_spherical_two_parallel.py  bench_srs_iiwa14.py  bench_three_parallel.py  bench_two_intersecting.py  bench_two_parallel.py  build_cython.py  check.sh  diagnose_failures.py  install-hooks.sh  prewarm_descriptions.py  profile_7r_arms.py  profile_jaco2.py  profile_xarm7.py  regen_artifacts.py  regen_bench.py  regen_docs.py  release-precheck.sh  spike_puma_specialised.py  strip_urdf_fixture.py  track_speedup.py
src/ikfastpy/: _kinbody.py  _urdf.py
src/ikfastpy/_vendor/: UPSTREAM.md  ikfast.py  ikfast_generator_cpp.py
src/ssik/: __init__.py  _kinbody.py  _mjcf.py  _pencil.py  _urdf.py  cli.py  manipulator.py  postprocess.py
src/ssik/_vendor/: UPSTREAM.md  ikfast.py  ikfast_generator_cpp.py
src/ssik/codegen/: __init__.py
src/ssik/codegen/_compose/: __init__.py  _target.py  general_6r.py  seven_r.py  spherical.py  spherical_two_intersecting.py  spherical_two_parallel.py  three_parallel.py
src/ssik/codegen/_symbolic/: __init__.py  sp1.py  sp2.py  sp3.py  sp4.py  sp6.py
src/ssik/core/: __init__.py  codegen.py  diagnostic.py  dispatcher.py  solution.py  solver_registry.py  tolerances.py  topology.py
src/ssik/internals/: __init__.py
src/ssik/kinematics/: __init__.py  _generalized_euler.py  _scalar3.py  poe_fk.py  poe_to_dh.py  predicates.py  reverse.py
src/ssik/prebuilt/: MANIFEST.toml  README.md  _manifest.py  big_yam_ik.py  fanuc_crx10ial_ik.py  fr3_ik.py  franka_panda_ik.py  gen3_ik.py  iiwa14_ik.py  jaco2_ik.py  kassow_kr810_ik.py  openarm_left_ik.py  openarm_right_ik.py  piper_ik.py  puma560_ik.py  r1pro_left_ik.py  r1pro_right_ik.py  rizon10_ik.py  rizon4_ik.py  standardbots_core_ik.py  standardbots_spark_ik.py  standardbots_thor_ik.py  ur10e_ik.py  ur16e_ik.py  ur20_ik.py  ur30_ik.py  ur3e_ik.py  ur5_ik.py  ur5e_ik.py  xarm6_ik.py  xarm7_ik.py  yam_ik.py  z1_ik.py
src/ssik/refinement/: __init__.py  rescue.py
src/ssik/solvers/: __init__.py  ur_family_hawkins.py
src/ssik/solvers/husty_pfurner/: __init__.py  _back_substitute.py  _constraints.py  _eliminate.py  _study.py  general_6r.py
src/ssik/solvers/ikgeo/: __init__.py  _bivariate.py  _raghavan_roth.py  _univariate.py  gen_six_dof.py  general_6r.py  spherical.py  spherical_two_intersecting.py  spherical_two_parallel.py  three_parallel.py  two_intersecting.py  two_parallel.py
src/ssik/solvers/jointlock/: __init__.py  seven_r.py
src/ssik/solvers/numerical/: __init__.py  lm_multi_restart.py
src/ssik/solvers/seven_r/: __init__.py  _feasible_param.py  _swivel_limits.py  spherical_shoulder.py  spherical_shoulder_polished.py  srs.py  srs_polished.py
src/ssik/subproblems/: __init__.py  _aux.py  _rotation.py  _validate.py  sp1.py  sp2.py  sp3.py  sp4.py  sp5.py  sp6.py
tests/: _hypothesis_strategies.py  conftest.py  fk_ik_eval.py  test_aot_prime.py  test_arm_onboarding.py  test_artifact_live_parity.py  test_artifact_snapshots.py  test_axis_sign_robustness.py  test_big_yam.py  test_cached_rr_jointlock.py  test_cli.py  test_cli_add_arm.py  test_codegen.py  test_codegen_gauge_parity.py  test_compose_spherical.py  test_compose_spherical_two_intersecting.py  test_compose_spherical_two_parallel.py  test_dispatcher.py  test_explain_mode.py  test_fanuc_crx10ial.py  test_feasible_param_bounded.py  test_flexiv_rizon4.py  test_fr3.py  test_franka_fixture.py  test_generalized_euler.py  test_husty_pfurner_back_substitute.py  test_husty_pfurner_constraints.py  test_husty_pfurner_eliminate.py  test_husty_pfurner_locked_7r.py  test_husty_pfurner_oracles.py  test_husty_pfurner_robustness.py  test_husty_pfurner_study.py  test_ikgeo_gen_six_dof.py  test_ikgeo_general_6r.py  test_ikgeo_spherical.py  test_ikgeo_two_intersecting.py  test_ikgeo_two_parallel.py  test_in_limits_resolver_wiring.py  test_jaco2_general_6r.py  test_jointlock_seven_r.py  (+71 more)
tests/artifacts/: franka_panda_ik.py  jaco2_ik.py  puma560_ik.py  ur5_ik.py
tests/fixtures/: _perf.py  big_yam.urdf  franka_panda.py  franka_panda.urdf  jaco2.py  kassow_kr810.urdf  kuka_iiwa14.py  kuka_iiwa14.urdf  piper.urdf  puma560.urdf  r1pro_left.urdf  r1pro_right.urdf  rizon10.urdf  rizon4.urdf  standardbots_core.urdf  standardbots_spark.urdf  standardbots_thor.urdf  toy2r.urdf.xacro  toy3r.xml  ur10e.urdf  ur16e.urdf  ur20.urdf  ur30.urdf  ur3e.urdf  ur5.py  ur5.urdf  ur5e.urdf  xarm6.urdf  xarm7.py  xarm7.urdf  yam.urdf
tools/: encode_demo_assets.py
