[build-system]
requires = ["hatchling>=1.27", "hatch-vcs>=0.4"]
build-backend = "hatchling.build"

[project]
name = "ssik"
description = "Analytical inverse kinematics for non-Pieper 6R arms."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "Siddhartha Srinivasa" }]
keywords = ["robotics", "inverse-kinematics", "ik-geo", "kinematics"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=2.0",
    "sympy>=1.10",
]
dynamic = ["version"]

# Optional feature extras. Users opt in per feature; the core wheel stays light.
[project.optional-dependencies]
urdf = [
    "urchin>=0.0.27",
]

[project.urls]
Repository = "https://github.com/siddhss5/ikfastpy"
Issues = "https://github.com/siddhss5/ikfastpy/issues"

[project.scripts]
ssik = "ssik.cli:main"

# PEP 735 dependency groups — for tooling that's not an "extra" of the package.
[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.8",
    "mypy>=1.13",
    "urchin>=0.0.27",  # exercised by the URDF-adapter tests
    "hypothesis>=6.112",  # property-based fuzzing of the URDF loader
    "cython>=3.1",  # in-place builds via scripts/build_cython.py (#137 Slice 1)
    "setuptools>=70",  # cythonize+setuptools build backend
]
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.27",
    "pymdown-extensions>=10.12",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/ssik/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/ssik"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]
extend-exclude = [
    # Generated reference artifacts. Not subject to lint rules; their format
    # is dictated by ssik.core.codegen and validated via byte-equal snapshot
    # tests in test_artifact_snapshots.py.
    "tests/artifacts",
]

[tool.ruff.lint]
select = [
    "E", "W",   # pycodestyle
    "F",        # pyflakes
    "I",        # isort
    "B",        # bugbear
    "UP",       # pyupgrade
    "RUF",      # ruff-specific
    "SIM",      # simplify
    "PT",       # pytest style
]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src", "tests"]
exclude = ['^tests/artifacts/']

# sympy ships no type stubs; used at module-import time for offline
# per-arm symbolic preprocessing in ssik.solvers.ikgeo._raghavan_roth.
[[tool.mypy.overrides]]
module = "sympy.*"
ignore_missing_imports = true

# urchin (URDF parser) ships no type stubs.
[[tool.mypy.overrides]]
module = "urchin.*"
ignore_missing_imports = true

# tests/fixtures/jaco2.py is reachable via sys.path injection in tests; mypy
# resolves it correctly when run inside pytest but not from a top-level pass.
[[tool.mypy.overrides]]
module = "jaco2"
ignore_missing_imports = true

# Same for tests/fixtures/franka_panda.py.
[[tool.mypy.overrides]]
module = "franka_panda"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-ra", "--strict-markers", "-m", "not slow"]
markers = [
    "slow: symbolic IK generation tests that run on the order of seconds to minutes; opt in with `-m slow`",
]
